# BRAW_worker

./: .gitignore  CMakeLists.txt  DEPLOY.bat  DEPLOY_GUIDE.md  README.md  RENDERFARM_README.md  Run_BRAW_FARM.bat  failed_jobs.json  farm_ui_original.py  fix_done_check.py  rebuild.bat  run_batch_ui.bat  run_farm_simple.bat  run_farm_ui.bat  run_farm_v2.bat  studio-config-v2.1.0_aces-v1.3_ocio-v2.1.ocio
.claude/: settings.local.json
DOC/: README.md  RENDERFARM_README.md
braw_batch_ui/: BRAW-Brew.spec  README.md  build_exe.bat  main.py  pyproject.toml  run_farm.bat  run_farm_v1.bat  run_farm_v2.bat
braw_batch_ui/_archived_patches/: apply_output_path_fix.py  patch_custom_frames.py  patch_db_commit.py  patch_dynamic_parallel.py  patch_frame_column.py  patch_frame_label.py  patch_frame_range_fix.py  patch_live_progress.py  patch_open_folder.py  patch_parse_frames.py  patch_total_progress.py  patch_worker_heartbeat.py
braw_batch_ui/braw_batch_ui/: config.py  farm_core.py  farm_core_v2.py  farm_db.py  farm_ui.py  farm_ui_v2.py  main.py  run_farm.py  run_farm_selector.py  run_farm_v2.py
src/app/: CMakeLists.txt  cli_decode.cpp
src/core/: CMakeLists.txt  braw_decoder.cpp  braw_decoder.h  frame_buffer.cpp  frame_buffer.h  stmap_warper.cpp  stmap_warper.h
src/export/: CMakeLists.txt  exr_writer.cpp  exr_writer.h  image_writer.cpp  image_writer.h
src/ui/: CMakeLists.txt  export_worker.cpp  export_worker.h  image_viewer.cpp  image_viewer.h  main.cpp  main_window.cpp  main_window.h  timeline_slider.cpp  timeline_slider.h  toggle_color.patch  viewer_main.cpp  viewer_window.cpp  viewer_window.cpp.bak  viewer_window.cpp.orig  viewer_window.h
tool/SeqChecker/: README.txt
